Version 1.7.1.99
------------------------------------------------------------------------------

* `rbind.fill` now works consistently with 0 column data frames

* `join` works correctly when there are no common rows (Fixes #74), or when one input has no rows (Fixes #48). It also consistently orders the columns: common columns, then x cols, then y cols (Fixes #40).

* `split_indices`, which powers much internal splitting code (like `vaggregate`, `join` and `d*ply`) is about 2x faster.  It was already incredible fast ~0.2s for 1,000,000 obs, so this won't have much impact on overall performance

* `a*ply`: 25x speedup when indexing array objects, 3x speedup when indexing data frames.  This should substantially reduce the overhead of using `a*ply`

* `quickdf` is around 20% faster

* `round_any` now works with `POSIXct` objects, thanks to Jean-Olivier Irisson (#76)

* Improved documentation thanks to patches from Tim Bates.

* Summarise now works iteratively so that later columns can refer to earlier.  (Thanks to Jim Hester, #44)

* New `take` function for subsetting along an arbitrary dimension.

* `*aply` functions now bind list mode results into a list-array (Peter Meilstrup)

* `idata.frame`: Subsetting immutable data frames with `[.idf` is now
  faster (Peter Meilstrup)

* `rbind.fill` and `rbind.fill.matrix` work consistently with matrices
  and data frames with zero rows. Fixes #79. (Peter Meilstrup)

Version 1.7.1
------------------------------------------------------------------------------

* Fix bug in id, using numeric instead of integer

Version 1.7
------------------------------------------------------------------------------

* `rbind.fill`: if a column contains both factors and characters (in different
  inputs), the resulting column will be coerced to character

* When there are more than 2^31 distinct combinations `id`, switches to a
  slower fallback strategy using strings (inspired by `merge`) that guarantees